2015-02-18  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/NEWS, DOC/USAGE: Updated for new release.


2015-02-12  Petr Stehlik <pstehlik@sophics.cz>
Committing fixes provided by an Anonymous author in SF.net Bugs:
* configure.ac: native building on RPi fixed
* sdl/video.c: handle properly situation when any resolution is available


2015-02-12  Perry McFarlane  <perry_m@mail.com>
* DOC/ChangeLog, DOC/TODO, DOC/USAGE, atari.c, cartridge.c, cfg.c,
  configure.ac, pbi.c, ui.c, videomode.[ch], sdl/input.c, sdl/palette.c,
  sdl/video.[ch], sdl/video_gl.c, sdl/video_sw.c, bit3.[ch]: Emulate the Bit3
  Full View 80 column card for the Atari 800.  Added more #ifdefs for AF80,
  XEP80_EMULATION, PBI_PROTO80, and NTSC_FILTER.


2015-02-07  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cassette.c, img_tape.c: Minimal support for reading CAS "fsk " chunks, to
  support some tape images of copy-protected original software, only with
  unpatched SIO.


2015-01-24  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* platform.h, sound_oss.c, sound.[ch], ui.c, dos/sound_dos.c, javanm/sound.c,
  sdl/sound.c, atari800.man, DOC/USAGE: Improve usability: rename "Fragment
  size" to "Hardware buffer size" and change the unit to milliseconds instead
  of frames. Code for resizing the buffer to a power of 2 is now called in
  platform-specific modules - the reason is not all sound backends require
  such adjustment of the buffer length.


2015-01-10  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* win32/msc/Makefile: Fixed incorrect file extensions.


2014-11-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* colours_ntsc.c, atari_ntsc/atari_ntsc_impl.h: Fixed mathematics in the YIQ
  computations - although the resulting colors were correct, the names of i
  and q variables were swapped in the sources.

* colours_ntsc.c, colours_pal.c, colours.[ch], pal_blending.c, filter_ntsc.c,
  atari_ntsc/atari_ntsc.c, DOC/NEWS: Fixed computation of gamma adjustment -